--- a/ContactLLS/Base.lproj/Main.storyboard
+++ b/ContactLLS/Base.lproj/Main.storyboard
@@ -105,19 +105,18 @@
                         <viewControllerLayoutGuide type="top" id="2x9-2y-fxV"/>
                         <viewControllerLayoutGuide type="bottom" id="acl-2L-Wg1"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="glV-4T-OlN">
+                    <view key="view" contentMode="scaleToFill" id="glV-4T-OlN" customClass="ContactDetailView" customModule="ContactLLS" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yd5-tl-RVw" customClass="ContactDetailHeaderView" customModule="ContactLLS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6yv-8V-eEs" customClass="ContactDetailHeaderView" customModule="ContactLLS" customModuleProvider="target">
+                                <rect key="frame" x="47" y="53" width="280" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="877-H0-iND"/>
-                                </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ebS-i5-PCM">
-                                <rect key="frame" x="0.0" y="300" width="375" height="367"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ebS-i5-PCM" customClass="ContactDetailTableView" customModule="ContactLLS" customModuleProvider="target">
+                                <rect key="frame" x="47" y="263" width="280" height="320"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="MrE-VN-pQ5" id="orR-cC-aKt"/>
@@ -126,19 +125,10 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ebS-i5-PCM" secondAttribute="trailing" id="8dA-5W-WOk"/>
-                            <constraint firstItem="yd5-tl-RVw" firstAttribute="top" secondItem="glV-4T-OlN" secondAttribute="top" id="MeO-Zq-lBj"/>
-                            <constraint firstItem="yd5-tl-RVw" firstAttribute="leading" secondItem="glV-4T-OlN" secondAttribute="leading" id="QrR-q6-eBH"/>
-                            <constraint firstItem="ebS-i5-PCM" firstAttribute="leading" secondItem="glV-4T-OlN" secondAttribute="leading" id="clN-hG-YWi"/>
-                            <constraint firstItem="acl-2L-Wg1" firstAttribute="top" secondItem="ebS-i5-PCM" secondAttribute="bottom" id="d2F-Px-pKL"/>
-                            <constraint firstAttribute="trailing" secondItem="yd5-tl-RVw" secondAttribute="trailing" id="e9x-Fp-yrg"/>
-                            <constraint firstItem="ebS-i5-PCM" firstAttribute="top" secondItem="yd5-tl-RVw" secondAttribute="bottom" id="m5v-sq-ZvU"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TVl-GX-fiv"/>
                     <connections>
-                        <outlet property="headerView" destination="yd5-tl-RVw" id="Amy-K7-oiI"/>
+                        <outlet property="headerView" destination="6yv-8V-eEs" id="MM7-Q2-Ddf"/>
                         <outlet property="tableView" destination="ebS-i5-PCM" id="djU-pK-Pcj"/>
                     </connections>
                 </viewController>
