--- a/ContactLLS/Base.lproj/Main.storyboard
+++ b/ContactLLS/Base.lproj/Main.storyboard
@@ -105,18 +105,12 @@
                         <viewControllerLayoutGuide type="top" id="2x9-2y-fxV"/>
                         <viewControllerLayoutGuide type="bottom" id="acl-2L-Wg1"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="glV-4T-OlN" customClass="ContactDetailView" customModule="ContactLLS" customModuleProvider="target">
+                    <view key="view" contentMode="scaleToFill" id="glV-4T-OlN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6yv-8V-eEs" customClass="ContactDetailHeaderView" customModule="ContactLLS" customModuleProvider="target">
-                                <rect key="frame" x="47" y="53" width="280" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ebS-i5-PCM" customClass="ContactDetailTableView" customModule="ContactLLS" customModuleProvider="target">
-                                <rect key="frame" x="47" y="263" width="280" height="320"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ebS-i5-PCM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="MrE-VN-pQ5" id="orR-cC-aKt"/>
@@ -125,10 +119,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ebS-i5-PCM" firstAttribute="top" secondItem="glV-4T-OlN" secondAttribute="top" id="KUl-C5-jsk"/>
+                            <constraint firstAttribute="trailing" secondItem="ebS-i5-PCM" secondAttribute="trailing" id="Vdb-s7-W99"/>
+                            <constraint firstItem="ebS-i5-PCM" firstAttribute="leading" secondItem="glV-4T-OlN" secondAttribute="leading" id="bQT-yp-9IJ"/>
+                            <constraint firstItem="acl-2L-Wg1" firstAttribute="top" secondItem="ebS-i5-PCM" secondAttribute="bottom" id="iuX-PK-MQa"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TVl-GX-fiv"/>
                     <connections>
-                        <outlet property="headerView" destination="6yv-8V-eEs" id="MM7-Q2-Ddf"/>
                         <outlet property="tableView" destination="ebS-i5-PCM" id="djU-pK-Pcj"/>
                     </connections>
                 </viewController>
